16//09 agency-member disable who don't same role and agency

--- a/src/app/view/manageuser/profileuser/profileuser.component.css
+++ b/src/app/view/manageuser/profileuser/profileuser.component.css
@@ -26,6 +26,15 @@ h4{
   color: black;
 }
 
+.linkA a{
+  color: #000000;
+  font-weight: 300;
+}
+.linkA:hover{
+  cursor: pointer !important;
+  color: #9c27b0 !important;
+}
+
 
 /* 4. Add a border to .card and padding to .card-header */
 /* .card {
