--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -24,8 +24,8 @@
             <div class="card-body">
                 <div class="row">
                     <!-- ข้อมูลเอกสาร -->
-                    <div class="col-md-8">
-                        <div class="row mb-3">
+                    <div class="col-md-8" style="border: 1px solid rgb(199, 195, 195); border-radius: 5px; padding: 10px 20px;">
+                        <div class="row mb-3" style="border-bottom: 1px solid rgba(227, 225, 225, 0.663);padding: 0 0 10px;">
                             <div class="col-md-6" style="display: flex;">
                                 <p
                                     style="display: flex; margin: 0; align-items: center; font-size: 18px; font-weight: 900;">
