--- a/src/app/view/manageperson/manageperson.component.css
+++ b/src/app/view/manageperson/manageperson.component.css
@@ -22,6 +22,63 @@
   }
 
 
+    /*Modal style*/
+ 
+.box:focus-within{
+  background-color: #f1f5ff;
+  border-radius: 5px;
+}
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+  font-family: 'Sarabun', sans-serif;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}  
+
+.form-group input {
+  display: block;
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}
+.form-select{
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+  color:#5b5a5a;
+}
+
+
+.form-select:disabled {
+  background-color: #ccc; /* Light gray color for disabled state */
+  cursor: not-allowed; /* Show a 'not-allowed' cursor when hovering over the disabled select */
+}
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
+}
+
+/*invalidate style*/
+.error-text{
+      font-size: 14px;
+      font-family: 'Sarabun', sans-serif;
+      color: red;
+}
+.form-group input.box-validate {
+      border: 1px solid red;
+      border-radius: 5px;
+}
 
 
 
@@ -29,6 +86,21 @@
 
 
 
+
+
+:host ::ng-deep .btn-add{
+  color: rgb(255, 255, 255);
+  background-color: rgb(36, 160, 237);/*#000dc2ef  */
+  border-color: #24a0ed85;;
+  /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+  font-family: 'Sarabun', sans-serif;
+
+}
+:host ::ng-deep .btn-add:hover{
+  background-color: #24a0ed; 
+  border-color: #00087c9f;
+  /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
+}
 
   :host ::ng-deep .table.dataTable>thead .sorting:before, table.dataTable>thead .sorting_asc:before, table.dataTable>thead .sorting_desc:before, table.dataTable>thead .sorting_asc_disabled:before, table.dataTable>thead .sorting_desc_disabled:before {
     display: none;
