--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -195,7 +195,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="title mb-0">จำนวนผู้ใช้งาน</p>
-                  <h2 class="amount">{{ userCount }}</h2>
+                  <h2 class="amount">{{ userCount -1 }}</h2>
                 </div>
                 <div class="imgBG">
                   <img src="./assets/img/group.png" alt="paper" class="paper-img">
