16//09 14:43 add eyes to see password , DataRecordFunction and fixed some select Provices  sidebar

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -45,6 +45,12 @@
       </div>
 
     </li>
+    <!-- <li  routerLinkActive="active">
+      <a class="nav-link">
+        <i class="material-icons">person</i>
+        <p>ข้อมูลผู้ใช้งาน</p>
+      </a>
+    </li> -->
     <li routerLinkActive="active" class="active-pro nav-item" (click)="openModalLogout()">
       <a class="nav-link">
         <i class="material-icons">logout</i>
