--- a/src/app/view/manageperson/manageperson.component.html
+++ b/src/app/view/manageperson/manageperson.component.html
@@ -29,9 +29,10 @@
                   <th style="color: black; font-size: 16px;">นามสกุล</th>
                   <th style="color: black; font-size: 16px;">ตำเเหน่ง</th>
                   <th style="color: black; font-size: 16px;">อีเมล</th>
+                  <th style="color: black; font-size: 16px; width: 13%;">สถานะผู้ใช้งาน</th>
 
             
-                  <!-- <th class="text-center" style="color: black; font-size: 16px;"><i class="fa fa-gear"></i></th> -->
+                  <th class="text-center" style="color: black; font-size: 16px;"><i class="fa fa-gear"></i></th>
                 </tr>
               </thead>
               <tbody>
@@ -50,14 +51,18 @@
                   <td style="white-space: nowrap;">
                     {{person?.email}}
                   </td>
-     
-                  <!-- <td class="text-center" style="width:1% ;white-space: nowrap;">
-                    <button (click)="openDataDetail(person?._id)" style="border: none; background: none; color: black;">
-                      <i data-toggle="tooltip" title="ดูรายละเอียดเอกสาร" data-placement="top"
-                        class="fa fa-pencil"></i>
+                  <td class="toggle-container">
+                    <input type="checkbox" id="checkbox{{i}}" [(ngModel)]="person.isActive"
+                      (change)="updateUserStatus(person)">
+                    <label for="checkbox{{i}}" class="toggle-switch"></label>
+                  </td>
+                  
+                  <td class="text-center" style="width:1% ;white-space: nowrap;">
+                    <button (click)="getUserReportProfile(person?._id)" style="border: none; background: none; color: black;">
+                      <i data-toggle="tooltip" title="ดูรายละเอียกช้อมูล" data-placement="top"
+                        class="fa fa-file-text-o ModalIcon"></i>
                     </button>
-                   
-                  </td> -->
+                   </td>
                 </tr>
               </tbody>
             </table>
@@ -95,15 +100,19 @@
   
                     <div class="row box">
                       <div class="col-sm-6">
-                        <div class="form-group">
+                        <div class="form-group"  style=" height: 110px;">
                           <label for="password" style="font-size: 16px;">รหัสผ่าน</label>
-                          <input type="password" id="password" formControlName="password" class="form-control" required
+                          <input  [type]="PasswordFieldType" type="password" id="password" formControlName="password" class="form-control" required
                             placeholder="กรอกรหัสผ่านของคุณ"
                             [ngClass]="{'box-validate':  regisForm.controls['password'].invalid && (regisForm.controls['password'].touched || regisForm.controls['password'].dirty || Submitted)}">
                           <div
                             *ngIf="regisForm.get('password')?.invalid && (regisForm.get('password')?.touched || regisForm.get('password')?.dirty )">
                             <small class="error-text">รหัสผ่านต้องมีความยาวอย่างน้อย 8 ตัวอักษร</small>
                           </div>
+                          <button type="button" class="eyePassword" 
+                          (click)="togglePasswordVisibility('Password')">
+                                <i [class]="PasswordFieldType === 'password' ? 'fa fa-eye' : 'fa fa-eye-slash'"></i>
+                          </button>
                           <!-- <div *ngIf="regisForm.get('password')?.invalid && (regisForm.get('password')?.touched || regisForm.get('password')?.dirty || Submitted)">
                                   <small class="error-text">กรุณากรอกข้อมูล**</small>
                               </div> -->
@@ -111,15 +120,19 @@
                       </div>
   
                       <div class="col-sm-6">
-                        <div class="form-group">
-                          <label for="confirmpassword" style="font-size: 16px;">ยืนยัน รหัสผ่าน</label>
-                          <input type="password" id="confirmpassword" class="form-control"
+                        <div class="form-group"  style=" height: 110px;">
+                          <label  for="confirmpassword" style="font-size: 16px;">ยืนยัน รหัสผ่าน</label>
+                          <input  [type]="confirmPasswordFieldType" type="password" id="confirmpassword" class="form-control"
                             formControlName="confirmpassword" required placeholder="กรอกรหัสผ่านของคุณ"
                             [ngClass]="{'box-validate':  regisForm.controls['confirmpassword'].invalid && (regisForm.controls['confirmpassword'].touched || regisForm.controls['confirmpassword'].dirty || Submitted)}">
                           <div
                             *ngIf="regisForm.get('confirmpassword')?.invalid && (regisForm.get('confirmpassword')?.touched || regisForm.get('confirmpassword')?.dirty)">
                             <small class="error-text">รหัสผ่านไม่ตรงกัน</small>
                           </div>
+                          <button type="button" class="eyePassword" 
+                          (click)="togglePasswordVisibility('confirmPassword')">
+                               <i [class]="confirmPasswordFieldType === 'password' ? 'fa fa-eye' : 'fa fa-eye-slash'"></i>
+                         </button>
                           <!-- <div *ngIf="regisForm.get('confirmpassword')?.invalid && (regisForm.get('confirmpassword')?.touched || regisForm.get('confirmpassword')?.dirty || Submitted)">
                                   <small class="error-text">กรุณากรอกข้อมูล**</small>
                               </div> -->
