--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -83,6 +83,15 @@ input{
   display: none;
 }
 
+/*toggle status style end here! */
+.eyePassword{
+  position: absolute;
+  right: 0.7rem;
+  top: 42%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: transparent;
+}
 
 .card-body {
   display: flex;
