--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -8,7 +8,8 @@
             <div class="col-md-3 filter-item">
               <h4>กรองข้อมูล</h4>
               <div class="dropdown">
-                <div class="filter-box" style="font-size: 14px;" (click)="toggleDropdown('province',$event)">
+                <span class="filter-box" style="font-size: 14px; align-items: center; "  *ngIf="isAdmin">{{ getProvinceName(AgencyData?.province) }}</span>
+                <div *ngIf="!isAdmin" class="filter-box" style="font-size: 14px;" (click)="toggleDropdown('province',$event)">
                   เลือกจังหวัด
                   <span class="fa fa-chevron-down" [class.animate]="isProvinceDropdownOpen"
                     *ngIf="isProvinceDropdownOpen"></span>
@@ -26,7 +27,7 @@
                       <input type="checkbox" id="select-all" (change)="onSelectAll($event)">
                       &nbsp;<label for="select-all">ทั้งหมด</label>
                     </div>
-                    <div class="dropdown-item" *ngFor="let province of filteredProvinces">
+                    <div class="dropdown-item" *ngFor="let province of allProvinces">
                       <input type="checkbox" [id]="province.id" [value]="province.id"
                         (change)="onProvinceSelect($event)" [checked]="province.selected">
                       &nbsp;<label [for]="province.id">{{ province.name_th }}</label>
@@ -147,8 +148,9 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="title mb-0">จำนวนกระดาษ</p>
-                  <h2 class="amount">{{ totalSignedDocuments }}</h2>
+                  <h2 class="amount">{{totalDocumentsCount }}</h2>
                 </div>
+                <!--totalSignedDocuments-->
                 <div class="imgBG">
                   <img src="./assets/img/paper.png" alt="paper" class="paper-img">
                 </div>
@@ -172,7 +174,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>  
         <!-- จำนวนผู้ใช้งาน -->
         <div class="col-md-3" *ngIf="isAdmin">
           <div class="card Box4">
@@ -180,7 +182,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="title mb-0">จำนวนผู้ใช้งาน</p>
-                  <h2 class="amount">{{ userCount2 }}</h2>
+                  <h2 class="amount">{{ AgencyPersonCount }}</h2>
                 </div>
                 <div class="imgBG">
                   <img src="./assets/img/group.png" alt="paper" class="paper-img">
