--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -91,7 +91,7 @@
                   <i data-toggle="tooltip" title="การจดบันทึก" data-placement="top"
                     class="fa fa-pencil-square-o Record"></i>
                 </button>
-                <button *ngIf="!item.record_filename" (click)="openDetailModal(item?._id)"
+                <button  (click)="openDetailModal(item?._id)"
                   style="border: none; background: none; color: black;">
                   <i data-toggle="tooltip" title="เพิ่มเนื้อหา" data-placement="top"
                     class="fa fa-file-text-o ModalIcon"></i>
@@ -150,7 +150,7 @@
 
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-5">
                     <div class="form-group">
                       <label for="startDate">วันที่เริ่มตรวจสอบ
                         <span
@@ -169,7 +169,7 @@
                       <!--style="color:rgb(171, 171, 171)"-->
                     </div>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-5">
                     <div class="form-group">
                       <label for="endDate">วันที่เสร็จสิ้น
                         <span
