17//09 reset name change

--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -74,7 +74,7 @@
                                    <h4> ข้อมูลผู้ใช้</h4>
                                    <!-- <button  type="button" (click)=" editProfile()">แก้ไขข้อมูลส่วนตัว</button> -->
                                     <div>
-                                        <button type="button" class="btn btn-add"  (click)="resetPassword(UserID,'newPassword')" >Reset Password</button>
+                                        <button type="button" class="btn btn-add"  (click)="resetPassword(UserID,'newPassword')" >รีเซ็ตรหัสผ่าน</button>
                                     </div>
                                     
                                 </div>
