--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -421,7 +421,7 @@
                             </div>
                             <div class="modal-footer" style="padding-bottom: 0;"> 
                                 <button type="submit" class="btn btn-success"><i class="fa fa-check"></i>&nbsp;ยืนยัน</button>
-                                <button type="button" class="btn btn-danger" (click)="closeModal()">ยกเลิก</button>
+                                <button type="button" class="btn btn-danger" (click)="closeModal()"><i class="fa fa-times"></i>&nbsp;ยกเลิก</button>
                             </div>
                            </form>
                         </div>
